--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<section id="text">
   					<h1>About Me</h1>
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					<p style="text-align:center;">I graduated from the <a href = "http://www.umass.edu/">University of Massachusetts</a> with a Bachelors of Science in Computer Engineering. I spend most of my free time coding random projects that come to mind or skateboarding. I am looking for full time developer positions.</p>
+  					<p style="text-align:center;">I graduated from the <a href = "http://www.umass.edu/">University of Massachusetts</a> with a Bachelors of Science in Computer Engineering. I spend most of my free time coding random projects or skateboarding. I am looking for full time developer positions.</p>
 				</section>
 
 				<div style="height:15px;font-size:15px;">&nbsp;</div>
