updated about me

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 						<header>
 							<span class="avatar"><img src="images/me.JPG" alt="" /></span>
 							<h1>Vee Upatising</h1>
-							<h2>Computer Engineer</h2>
+							<h2 style="font-size:80%">Bachelor of Science in</h2>
+							<h2 style="font-size:80%">Computer Engineering</h2>
+							<h2 style="font-size:80%">Concentrated on Data Science</h2>
 							<p style="color:#6495ED;text-align:center;"><a href="assets/resume.pdf">RESUME</a></p>
 						</header>
 						<footer>
@@ -35,7 +37,7 @@
 				<section id="text">
   					<h1>About Me</h1>
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					<p style="text-align:center;">I graduated from the <a href = "http://www.umass.edu/">University of Massachusetts</a> with a Bachelors of Science in Computer Engineering. I spend most of my free time coding random projects or skateboarding. I am looking for full time developer positions.</p>
+  					<p style="text-align:center;">I am a very self-driven person. I'm motivated to refine my skills and learn constantly. I have a passion for Data Science and I find that I am very results-oriented. I like to make sure that my projects have visually interpretable results that anyone can understand. I graduated from the <a href = "http://www.umass.edu/">University of Massachusetts</a> with a Bachelors of Science in Computer Engineering. I spend most of my free time coding personal projects or skateboarding. I find that each of these activities continuously pushes to me to work hard and become a better version of myself. <br>I am looking for full time developer positions.</p>
 				</section>
 
 				<div style="height:15px;font-size:15px;">&nbsp;</div>
