--- a/projects.html
+++ b/projects.html
@@ -140,6 +140,8 @@
 		  					<p>Kernel Ridge Regression and Basis Expanded Ridge Regression from scratch using NumPy:</p>
 		  					<img src="images/krr.jpg" alt="Kernel Ridge Regression" class="responsive">
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+		  					<p style="text-align: center;"><a href = "https://www.kaggle.com/c/s20-589-hw1-datab/leaderboard">Leaderboard Results</a></p>
+		  					
   					</details>
 
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
