--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<section id="text">
   					<h1>About Me</h1>
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					<p style="text-align:center;">I am a very self-driven person and I am motivated to refine my skills and learn constantly. I have a passion for Data Science and I find that I am very results-oriented. I like to make sure that my projects have visually interpretable results that anyone can understand. I graduated from the <a href = "http://www.umass.edu/">University of Massachusetts</a> with a Bachelors of Science in Computer Engineering. I spend most of my free time coding personal projects or skateboarding. I find that each of these activities continuously pushes to me to work hard and become a better version of myself. <br>I am looking for full time developer positions.</p>
+  					<p style="text-align:center;">I am a very self-driven person and I'm motivated to refine my skills and learn constantly. I have a passion for Data Science and I find that I am very results-oriented. I like to make sure that my projects have visually interpretable results that anyone can understand. I graduated from the <a href = "http://www.umass.edu/">University of Massachusetts</a> with a Bachelors of Science in Computer Engineering. I spend most of my free time coding personal projects or skateboarding. I find that each of these activities continuously pushes to me to work hard and become a better version of myself. <br>I am looking for full time developer positions.</p>
 				</section>
 
 				<div style="height:15px;font-size:15px;">&nbsp;</div>
