added back button

--- a/projects.html
+++ b/projects.html
@@ -9,10 +9,10 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-
 		<!-- Wrapper -->
 			<div id="wrapper2">
 				<section id="projects">
+					<p style="text-align: left; letter-spacing: 1px"><a href = "index.html">Go Back</a></p>
   					<h1>Projects</h1>
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					<p style="text-align:center;">I like to work on personal programming projects in my free time. I am specifically interested in Data Science and I do most of my work in Python. I have compiled a list of projects that I am proud of. These are all viewable on my <a href = "https://github.com/vee-upatising">GitHub</a>.</p>
@@ -171,9 +171,8 @@
 
 		<!-- Scripts -->
 			<script>
-				if ('addEventListener' in window) {
-					window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-preload\b/, ''); });
-					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
+				function goBack() {
+  					window.history.back()
 				}
 			</script>
 
