--- a/skate.html
+++ b/skate.html
@@ -13,6 +13,7 @@
 		<!-- Wrapper -->
 			<div id="wrapper2">
 				<section id="projects">
+            <p style="text-align: left; letter-spacing: 1px"><a href = "index.html">Go Back</a></p>
   					<h1>Skateboarding</h1>
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					<p style="text-align:center;">One of my passions is skateboarding. I have been skateboarding since I was 11 years old. I spent a lot of time running the UMass Skateboarding Club during college. This is a video I filmed during my senior year showcasing the skate community.</p>
