--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,18 @@
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
 
   					<details>
+  						<summary>Deep Color</summary>
+  							<div style="height:15px;font-size:15px;">&nbsp;</div>
+  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Deep-Color">GitHub Page</a></p>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
+		  					<p>Restoring The Color In Black & White Images Using Deep Convolutional GANs</p>
+		  					<img src="images/combined.jpg" alt="restored" class="responsive">
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+  					</details>
+
+  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+
+  					<details>
   						<summary>Generative Adversarial Networks</summary>
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
   							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Anime-DCGAN">GitHub</a> <a href = "https://github.com/vee-upatising/Cat-GAN">Pages</a></p>
@@ -65,11 +77,11 @@
   					<details>
   						<summary>Deep Learned Super Sampling</summary>
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/DLSS">GitHub Page</a></p>
+  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Super-Resolution-GAN">GitHub Page</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<p>Super sampling images to 16 times their original size using Convolutional Neural Networks. I compare <a href="https://pillow.readthedocs.io/en/3.1.x/reference/Image.html#PIL.Image.Image.resize"> Nearest Neighbor Interpolation</a> to my Deep Learned Super Sampling program below:</p>
-		  					<img src="images/zoe.gif" alt="League" class="responsive">
+		  					<p>Super sampling images to 4 times their original size using Convolutional Neural Networks. I compare <a href="https://pillow.readthedocs.io/en/3.1.x/reference/Image.html#PIL.Image.Image.resize"> Nearest Neighbor Interpolation</a> to my Deep Learned Super Sampling program below:</p>
 		  					<img src="images/flip.gif" alt="Switch Flip" class="responsive">
+		  					<img src="images/sr.jpg" alt="anime" class="responsive">
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
