Added Forward Propagtion GIF

--- a/projects.html
+++ b/projects.html
@@ -55,20 +55,7 @@
 		  					<video controls autoplay loop>
 							  <source src="images/gifcropped.webm" type="video/webm">
 							</video>
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					</details>
-
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-  					<details>
-  						<summary>Ms. Pac-Man Reinforcement Learning</summary>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Deep-Q-Network">GitHub Page</a></p>
-		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<p>Using Deep Q Networks to play Ms. Pac-Man:</p>
-		  					<video controls autoplay loop>
-							  <source src="images/mspacman.mp4" type="video/mp4">
-							</video>
+							<img src="images/forward_propagation.gif" alt="Forward Propagation" class="responsive">
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
@@ -113,6 +100,20 @@
   							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/K-Means-Image-Segmentation">GitHub Page</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<img src="images/kmeans.JPG" alt="K-Means" class="responsive">
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+  					</details>
+
+  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+
+  					<details>
+  						<summary>Ms. Pac-Man Reinforcement Learning</summary>
+  							<div style="height:15px;font-size:15px;">&nbsp;</div>
+  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Deep-Q-Network">GitHub Page</a></p>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
+		  					<p>Using Deep Q Networks to play Ms. Pac-Man:</p>
+		  					<video controls autoplay loop>
+							  <source src="images/mspacman.mp4" type="video/mp4">
+							</video>
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
