--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 							<h2 style="font-size:80%">Bachelor of Science in</h2>
 							<h2 style="font-size:80%">Computer Engineering</h2>
 							<h2 style="font-size:80%">Concentrated on Data Science</h2>
-							<p style="color:#6495ED;text-align:center;"><a href="assets/resume.pdf">RESUME</a></p>
+							<p style="color:#6495ED;text-align:center;">
+								<a href="assets/resume.pdf">RESUME</a>
+								<br>
+								<a href="https://app.workera.ai/public/candidate/certificate?code=ASNTE2Q0">WORKERA.AI CERTIFICATE</a>
+							</p>
 						</header>
 						<footer>
 							<ul class="icons">
