--- a/projects.html
+++ b/projects.html
@@ -36,6 +36,7 @@
 
   					<details>
   						<summary>Deep Color</summary>
+  							<a href="vb.html">Virtual Background</a>
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
   							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Deep-Color">GitHub Page</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
@@ -166,6 +167,14 @@
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<p>Using a Neural Network to come up with a image compression algorithm that takes up 37.5% of the space of the original image:</p>
 		  					<img src="images/vqvae.JPG" alt="Vector Quantized Variational AutoEncoder" class="responsive">
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+  					</details>
+
+  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+
+  					<details>
+  						<summary>Virtual Background</summary>
+  							<a href="vb.html">Virtual Background</a>
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
