Virtual Background info

--- a/projects.html
+++ b/projects.html
@@ -174,7 +174,7 @@
 
   					<details>
   						<summary>Virtual Background</summary>
-  							<a href="vb.html">Virtual Background</a>
+  							<a href="vb.html">Try Application</a>
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
