--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Vee Upatising's Photos</title>
+		<title>About Vee Upatising</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -10,12 +10,17 @@
 	</head>
 	<body class="is-preload">
 
+
+
 		<!-- Wrapper -->
 			<div id="wrapper2">
-				<section id="projects">
-            <p style="text-align: left; letter-spacing: 1px"><a href = "index.html">Go Back</a></p>
-  					<h1>Skateboarding</h1>
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+
+        <section id="projects">
+            <p style="text-align: left; letter-spacing: 1px;"><a href = "index.html">Go Back</a></p>
+            <h1>About Me</h1>
+            <div style="height:15px;font-size:15px;">&nbsp;</div>
+            <p style="text-align:center;">I am a very self-driven person and I'm motivated to refine my skills and learn constantly. I have a passion for Data Science and I find that I am very results-oriented. I like to make sure that my projects have visually interpretable results that anyone can understand. I graduated from the <a href = "http://www.umass.edu/">University of Massachusetts</a> with a Bachelors of Science in Computer Engineering. I spend most of my free time coding personal projects or skateboarding. I find that each of these activities continuously pushes to me to work hard and become a better version of myself. <br>I am looking for full time developer positions.</p>
+            <div style="height:15px;font-size:15px;">&nbsp;</div>
   					<p style="text-align:center;">One of my passions is skateboarding. I have been skateboarding since I was 11 years old. I spent a lot of time running the UMass Skateboarding Club during college. This is a video I filmed during my senior year showcasing the skate community.</p>
             <div style="height:20px;font-size:15px;">&nbsp;</div>
 
