--- a/index.html
+++ b/index.html
@@ -14,17 +14,26 @@
 			<div id="wrapper">
 
 				<!-- Main -->
+
+					<section id="header">
+	  					<h2>
+	  						<a href="about.html">About Me</a>
+	  						<small> | </small>
+	  						<a href="projects.html">Projects</a>
+	  					</h2>
+	  				</section>
+
+	  				<div style="height:2px;font-size:5px;">&nbsp;</div>
+
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/me.JPG" alt="" /></span>
+							<span class="avatar"><img src="images/me.jpg" alt="" /></span>
 							<h1>Vee Upatising</h1>
 							<h2 style="font-size:80%">Bachelor of Science in</h2>
 							<h2 style="font-size:80%">Computer Engineering</h2>
-							<h2 style="font-size:80%">Concentrated on Data Science</h2>
 							<p style="color:#6495ED;text-align:center;">
 								<a href="assets/resume.pdf">RESUME</a>
-								<br>
-								<a href="https://app.workera.ai/public/candidate/certificate?code=ASNTE2Q0">WORKERA.AI CERTIFICATE</a>
+								
 							</p>
 						</header>
 						<footer>
@@ -36,26 +45,18 @@
 						</footer>
 					</section>
 
-				<div style="height:15px;font-size:15px;">&nbsp;</div>
+					<div style="height:2px;font-size:5px;">&nbsp;</div>
 
-				<section id="text">
-  					<h1>About Me</h1>
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					<p style="text-align:center;">I am a very self-driven person and I'm motivated to refine my skills and learn constantly. I have a passion for Data Science and I find that I am very results-oriented. I like to make sure that my projects have visually interpretable results that anyone can understand. I graduated from the <a href = "http://www.umass.edu/">University of Massachusetts</a> with a Bachelors of Science in Computer Engineering. I spend most of my free time coding personal projects or skateboarding. I find that each of these activities continuously pushes to me to work hard and become a better version of myself. <br>I am looking for full time developer positions.</p>
-				</section>
+					<section id="header">
+	  					<h1>
+	  						<a href="certifications.html">Certificates</a>
+	  					</h1>
+	  				</section>
 
-				<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-				<section id="text">
-  					<h1><a href="projects.html">Projects</a></h1>
-  				</section>
-
-  				<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-  				<section id="text">
-  					<h1><a href="skate.html">Skateboarding</a></h1>
-  				</section>
-
+	  				<section id="invis">
+						<div style="height:50px;font-size:5px;">&nbsp;</div>
+	  				</section>
+	  				<div style="height:50px;font-size:5px;">&nbsp;</div>
 			</div>
 
 		<!-- Scripts -->
