--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/me.jpg" alt="" /></span>
+							<span class="avatar"><img src="images/me.JPG" alt="" /></span>
 							<h1>Vee Upatising</h1>
 							<h2 style="font-size:80%">Bachelor of Science in</h2>
 							<h2 style="font-size:80%">Computer Engineering</h2>
