--- a/about.html
+++ b/about.html
@@ -17,14 +17,13 @@
 
         <section id="projects">
             <p style="text-align: left; letter-spacing: 1px;"><a href = "index.html">Go Back</a></p>
+            <span class="avatar"><img src="images/circle.png" alt="" / class="center"></span>
+            <div style="height:18px;font-size:15px;">&nbsp;</div>
             <h1>About Me</h1>
             <div style="height:15px;font-size:15px;">&nbsp;</div>
             <p style="text-align:center;">I am a very self-driven person and I'm motivated to refine my skills and learn constantly. I have a passion for Data Science and I find that I am very results-oriented. I like to make sure that my projects have visually interpretable results that anyone can understand. I graduated from the <a href = "http://www.umass.edu/">University of Massachusetts</a> with a Bachelors of Science in Computer Engineering. I spend most of my free time coding personal projects or skateboarding. I find that each of these activities continuously pushes to me to work hard and become a better version of myself. <br>I am looking for full time developer positions.</p>
             <div style="height:15px;font-size:15px;">&nbsp;</div>
   					<p style="text-align:center;">One of my passions is skateboarding. I have been skateboarding since I was 11 years old. I spent a lot of time running the UMass Skateboarding Club during college. This is a video I filmed during my senior year showcasing the skate community.</p>
-            <div style="height:20px;font-size:15px;">&nbsp;</div>
-
-            <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/xKxLd0u6zSA?start=834&modestbranding=1" frameborder="0" allow="encrypted-media;" allowfullscreen></iframe></div>
 
             <div style="height:20px;font-size:15px;">&nbsp;</div>
 
@@ -93,6 +92,10 @@
   					<img src="images/skate15.jpeg" alt="rock to fakie" class="responsive">
 
   					<div style="height:20px;font-size:15px;">&nbsp;</div>
+
+		            <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/xKxLd0u6zSA?start=834&modestbranding=1" frameborder="0" allow="encrypted-media;" allowfullscreen></iframe></div>
+
+		            <div style="height:20px;font-size:15px;">&nbsp;</div>
 
 						<!-- Footer -->
 					<footer id="footer">
