--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 					<section id="header">
 	  					<h2>
 	  						<a href="about.html">About Me</a>
-	  						<small> | </small>
+	  						<small style="opacity:0%; font-size:65%">|</small>
+	  						<small>|</small>
+	  						<small style="opacity:0%; font-size:65%">|</small>
 	  						<a href="projects.html">Projects</a>
 	  					</h2>
 	  				</section>
