--- a/certifications.html
+++ b/certifications.html
@@ -16,7 +16,11 @@
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					<table style="width:100%">
 						  <tr>
-						    <th>Certificate:</th>
+						    <th>
+						    	Certificate:
+						    	<div style="height:15px;font-size:15px;">&nbsp;</div>
+							</th>
+
 						    <th>Issuer:</th> 
 						    <th>Recieved:</th>
 						  </tr>
