--- a/certifications.html
+++ b/certifications.html
@@ -10,6 +10,7 @@
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
+			<div style="height:65px;font-size:5px;">&nbsp;</div>
 			<div id="wrapper2">
 				<section id="projects">
 					<p style="text-align: left; letter-spacing: 1px"><a href = "index.html">Go Back</a></p>
