--- a/vb.html
+++ b/vb.html
@@ -30,10 +30,11 @@
     </section>
 
     <center>
-      <video id="video" width="640" height="480" autoplay playsinline></video>
+      <video id="video" width="640" height="480" autoplay></video>
     </center>
     <center>
       <canvas hidden id="canvas"></canvas>
+      <img hidden id='image' src='bg.JPG' />
       <h5>Virtual Background</h5>
       <p>Start and Stop to play the live video stream. Toggle between Mask and Normal to automatically chroma-key the background in the stream</p>
       <div class="btn-group btn-group-sm">
