--- a/vb.html
+++ b/vb.html
@@ -31,6 +31,7 @@
 
     <center>
       <video id="video" width="640" height="480" autoplay playsinline></video>
+      <img id="myImage" style="border:1px; display: none;" />
     </center>
     <center>
       <canvas hidden id="canvas"></canvas>
@@ -42,6 +43,9 @@
         <button id="unblur-btn" type="button" class="btn btn-sm btn-outline-secondary" hidden>Normal</button>
         <button id="stop-btn" type="button" class="btn btn-sm btn-outline-danger" disabled>Stop</button>
       </div>
+      <div style="height:20px;font-size:5px;">&nbsp;</div>
+      <h5>Upload Background</h5>
+      <input type="file" id="myFile" style="height:40px; width:215px"></input>
     </center>
     
 
