visual clean up

--- a/vb.html
+++ b/vb.html
@@ -36,7 +36,7 @@
     <center>
       <canvas hidden id="canvas"></canvas>
       <h5>Virtual Background</h5>
-      <p>Start and Stop to play the live video stream. Toggle between Mask and Normal to automatically chroma-key the background in the stream</p>
+      <p>Use the Start and Stop buttons to control your webcam.<br>Toggle between Mask and Normal to automatically replace the background in your video.</p>
       <div class="btn-group btn-group-sm">
         <button id="start-btn" type="button" class="btn btn-sm btn-outline-success">Start</button>
         <button id="blur-btn" type="button" class="btn btn-sm btn-outline-secondary" disabled>Mask</button>
@@ -45,6 +45,7 @@
       </div>
       <div style="height:20px;font-size:5px;">&nbsp;</div>
       <h5>Upload Background</h5>
+      <p>You can upload an custom image to be your background.<br>If no image is uploaded, the default background will be a white canvas.</p>
       <input type="file" id="myFile" style="height:40px; width:215px"></input>
     </center>
     
