--- a/vb.html
+++ b/vb.html
@@ -35,6 +35,7 @@
     </center>
     <center>
       <canvas hidden id="canvas"></canvas>
+      <div style="height:20px;font-size:5px;">&nbsp;</div>
       <h5>Virtual Background</h5>
       <p>Use the Start and Stop buttons to control your webcam.<br>Toggle between Mask and Normal to automatically replace the background in your video.</p>
       <div class="btn-group btn-group-sm">
