--- a/vb.html
+++ b/vb.html
@@ -4,17 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
     <title>Virtual Background</title>
-
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.2"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/body-pix@2.0"></script>
@@ -22,14 +12,8 @@
   </header>
 
   <main role="main">
-
-    <section class="jumbotron text-center">
-      <div class="container">
-        <h1>Virtual Background</h1>
-      </div>
-    </section>
-
     <center>
+      <h1>Virtual Background</h1>
       <video id="video" width="640" height="480" autoplay playsinline></video>
       <img id="myImage" style="border:1px; display: none;"/>
       <canvas hidden id="canvas"></canvas>
@@ -44,18 +28,12 @@
       </div>
       <div style="height:20px;font-size:5px;">&nbsp;</div>
       <h5>Upload Background</h5>
-      <p>You can upload an custom image to be your background.<br>If no image is uploaded, the default background will be a white canvas.</p>
-      <input type="file" id="myFile" style="height:40px; width:215px"></input>
+      <p>Upload a custom image to be your background.<br>If no image is uploaded, the default background will be a white canvas.</p>
+      <input type="file" id="myFile" style="height:640px; width:480px"></input>
     </center>
     
 
   </main>
 
   <script src="video.js"></script>
-  <style>
-    video {
-      -webkit-transform: scaleX(-1);
-      transform: scaleX(-1);
-    }
-  </style>
 </html>
