added super resoltion model

--- a/model.html
+++ b/model.html
@@ -15,10 +15,14 @@
 					<p style="text-align: left; letter-spacing: 1px"><a href = "projects.html">Go Back</a></p>
   					 <center>
 				      <h1>Super Resolution</h1>
-				      <img id="myImage" style="border:1px; display: none;"/>
-				      <canvas id="canvas"></canvas>
-				      <canvas id="canvas2"></canvas>
 				      <input type="file" id="myFile" style="width:480px"></input>
+				      <img id="myImage" style="border:1px; display: none;"/>
+				      <div style="height:5px;font-size:5px;">&nbsp;</div>
+				      <canvas id="canvas"></canvas>
+				      <p style = "text-align:center; display:none;" id="t1">Uploaded Image (64x64)</p>
+				      <div style="height:5px;font-size:5px;">&nbsp;</div>
+				      <canvas id="canvas2"></canvas>
+				      <p style = "text-align:center; display:none;" id="t2">Super Sampled Imaged (256x256)</p>
 				    </center>
 			</div>
 	</body>
