--- a/projects.html
+++ b/projects.html
@@ -71,11 +71,12 @@
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
 
   					<details>
-  						<summary>Deep Learned Super Sampling</summary>
+  						<summary>Deep Learned Super Resolution</summary>
+  							<a href="model.html">Try Application</a>
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
   							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Super-Resolution-GAN">GitHub Page</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<p>Super sampling images to 4 times their original size using Convolutional Neural Networks. I compare <a href="https://pillow.readthedocs.io/en/3.1.x/reference/Image.html#PIL.Image.Image.resize"> Nearest Neighbor Interpolation</a> to my Deep Learned Super Sampling program below:</p>
+		  					<p>Super sampling images to 4 times their original size using Convolutional Neural Networks. I compare <a href="https://pillow.readthedocs.io/en/3.1.x/reference/Image.html#PIL.Image.Image.resize"> Nearest Neighbor Interpolation</a> to my Deep Learned Super Resolution program below:</p>
 		  					<img src="images/flip.gif" alt="Switch Flip" class="responsive">
 		  					<img src="images/sr.jpg" alt="anime" class="responsive">
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
