--- a/gan.html
+++ b/gan.html
@@ -2,11 +2,10 @@
 <html>
 	<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.2"  crossorigin="anonymous"></script>
 	<head>
-		<title>Virtual Background</title>
+		<title>Interactive GANs</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
@@ -14,10 +13,10 @@
 				<section id="vb">
 					<p style="text-align: left; letter-spacing: 1px"><a href = "projects.html">Go Back</a></p>
   					 <center>
-				      <h1>Super Resolution</h1>
-				      <p style = "text-align:center";>Input</p>
+				      <h1>Interactive Generative Adversarial Networks</h1>
+				      <p style = "text-align:center";>Drag the slider to generate anime style faces from a range of inputs. Press the 'Generate Random' button to generate from random input</p>
 				      <div class="slidecontainer">
-					  	<input type="range" min="1" max="100" value="50" class="slider" id="myRange" style=" 
+					  	<input type="range" min="1" max="10" class="slider" id="myRange" style=" 
 					  	-webkit-appearance: none;  /* Override default CSS styles */
 						  appearance: none;
 						  width: 100%; /* Full-width */
@@ -28,10 +27,21 @@
 						  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
 						  transition: opacity .2s;">
 					  </div>
-					  <button id="start-btn" type="button">Generate</button>
 				      <img id="myImage" style="border:1px; display: none;"/>
 				      <div style="height:5px;font-size:5px;">&nbsp;</div>
 				      <canvas id="canvas" height="256" width="256"></canvas>
+				      <div style="height:10px;font-size:5px;">&nbsp;</div>
+				      <button id="random" type="button" style="  
+				      background-color: #008CBA;
+					  border: none;
+					  color: white;
+					  padding: 5px 5px;
+					  text-align: center;
+					  text-decoration: none;
+					  display: inline-block;
+					  border-radius: 2px;
+					  font-size: 16px;">
+					  Generate Random</button>
 				    </center>
 			</div>
 	</body>
