--- a/model.html
+++ b/model.html
@@ -2,11 +2,10 @@
 <html>
 	<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.2"  crossorigin="anonymous"></script>
 	<head>
-		<title>Virtual Background</title>
+		<title>Super Resolution</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
