--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -57,6 +56,7 @@
 
   					<details>
   						<summary>Generative Adversarial Networks</summary>
+  							<a href="gan.html">Interactive Application</a>
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
   							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Anime-DCGAN">GitHub</a> <a href = "https://github.com/vee-upatising/Cat-GAN">Pages</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
