--- a/projects.html
+++ b/projects.html
@@ -16,10 +16,39 @@
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					<p> &emsp; I like to work on personal programming projects in my free time. I am specifically interested in Data Science and I do most of my work in Python. I have compiled a list of projects that I am proud of. These are all viewable on my <a href = "https://github.com/vee-upatising">GitHub</a>.</p>
 
+  					  <details>
+  						<summary>Interactive Generative Adversarial Networks</summary>
+  							<a href="gan.html" style="color:#6495ED;text-align:center;">Go To Interactive Application</a>
+  							<div style="height:15px;font-size:15px;">&nbsp;</div>
+  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Anime-DCGAN">GitHub</a> <a href = "https://github.com/vee-upatising/Cat-GAN">Pages</a></p>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
+		  					<p>Generating cats and anime style faces using Deep Convolutional GANs. Interpolated sampling through the latent space of the generative model is visualized below:</p>
+		  					<video controls autoplay loop>
+							  <source src="images/gifcropped.webm" type="video/webm">
+							</video>
+							<img src="images/forward_propagation.gif" alt="Forward Propagation" class="responsive">
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+  					</details>
+
+  					 <div style="height:15px;font-size:15px;">&nbsp;</div>
+
   					<details>
   						<summary>Virtual Background</summary>
-  							<a href="vb.html">Try Application</a>
+  							<a href="vb.html" style="color:#6495ED;text-align:center;">Go To Application</a>
   					</details>
+
+  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+
+  					  					<details>
+  						<summary>Deep Color</summary>
+  							<div style="height:15px;font-size:15px;">&nbsp;</div>
+  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Deep-Color">GitHub Page</a></p>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
+		  					<p>Restoring The Color In Black & White Images Using Deep Convolutional GANs</p>
+		  					<img src="images/combined.jpg" alt="restored" class="responsive">
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+  					</details>
+
 
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
 
@@ -39,40 +68,14 @@
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-  					<details>
-  						<summary>Deep Color</summary>
-  							<a href="vb.html">Virtual Background</a>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Deep-Color">GitHub Page</a></p>
-		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<p>Restoring The Color In Black & White Images Using Deep Convolutional GANs</p>
-		  					<img src="images/combined.jpg" alt="restored" class="responsive">
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					</details>
 
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
 
-  					<details>
-  						<summary>Generative Adversarial Networks</summary>
-  							<a href="gan.html">Interactive Application</a>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Anime-DCGAN">GitHub</a> <a href = "https://github.com/vee-upatising/Cat-GAN">Pages</a></p>
-		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<p>Generating cats and anime style faces using Deep Convolutional GANs. Interpolated sampling through the latent space of the generative model is visualized below:</p>
-		  					<video controls autoplay loop>
-							  <source src="images/gifcropped.webm" type="video/webm">
-							</video>
-							<img src="images/forward_propagation.gif" alt="Forward Propagation" class="responsive">
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					</details>
 
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
 
   					<details>
   						<summary>Deep Learned Super Resolution</summary>
-  							<a href="model.html">Try Application</a>
+  							<a href="model.html" style="color:#6495ED;text-align:center;">Go To Application</a>
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
   							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Super-Resolution-GAN">GitHub Page</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
