--- a/gan.html
+++ b/gan.html
@@ -14,7 +14,8 @@
 					<p style="text-align: left; letter-spacing: 1px"><a href = "projects.html">Go Back</a></p>
   					 <center>
 				      <h1>Interactive Generative Adversarial Networks</h1>
-				      <p style = "text-align:center";>Drag the slider to generate anime style faces from a range of inputs real time using a Generative Adversarial Network. Press the 'Generate Random' button to generate from random input.</p>
+				      <p style = "text-align:center";>Drag the slider to generate anime style faces from a range of inputs real time using a Generative Adversarial Network. Alternatively, you can press the 'Generate Random' button to generate a face from a random input instead.</p>
+				      <h5 style = "text-align:center";>Input Range</h5>
 				      <div class="slidecontainer">
 					  	<input type="range" min="1" max="19" class="slider" id="myRange" style=" 
 					  	-webkit-appearance: none;  /* Override default CSS styles */
