--- a/projects.html
+++ b/projects.html
@@ -18,14 +18,24 @@
 
   					  <details>
   						<summary>Interactive Generative Adversarial Networks</summary>
-  							<a href="gan.html" style="color:#6495ED;text-align:center;">Go To Interactive Application</a>
+  						<div style="height:15px;font-size:15px;">&nbsp;</div>
+						    <button onclick="window.location.href='gan.html';" style="  
+						      background-color: #008CBA;
+							  border: none;
+							  color: white;
+							  padding: 5px 5px;
+							  text-align: center;
+							  text-decoration: none;
+							  display: inline-block;
+							  border-radius: 2px;
+							  font-size: 16px;">
+						      Go To Application</button>
   							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Anime-DCGAN">GitHub</a> <a href = "https://github.com/vee-upatising/Cat-GAN">Pages</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<p>Generating cats and anime style faces using Deep Convolutional GANs. Interpolated sampling through the latent space of the generative model is visualized below:</p>
 		  					<video controls autoplay loop>
 							  <source src="images/gifcropped.webm" type="video/webm">
 							</video>
-							<img src="images/forward_propagation.gif" alt="Forward Propagation" class="responsive">
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					</details>
 
@@ -33,7 +43,18 @@
 
   					<details>
   						<summary>Virtual Background</summary>
-  							<a href="vb.html" style="color:#6495ED;text-align:center;">Go To Application</a>
+  						<div style="height:15px;font-size:15px;">&nbsp;</div>
+    						<button onclick="window.location.href='vb.html';" style="  
+						      background-color: #008CBA;
+							  border: none;
+							  color: white;
+							  padding: 5px 5px;
+							  text-align: center;
+							  text-decoration: none;
+							  display: inline-block;
+							  border-radius: 2px;
+							  font-size: 16px;">
+						      Go To Application</button>
   					</details>
 
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
@@ -75,7 +96,17 @@
   					<details>
   						<summary>Deep Learned Super Resolution</summary>
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<a href="model.html" style="color:#6495ED;text-align:center;">Go To Application</a>
+  							<button onclick="window.location.href='model.html';" style="  
+						      background-color: #008CBA;
+							  border: none;
+							  color: white;
+							  padding: 5px 5px;
+							  text-align: center;
+							  text-decoration: none;
+							  display: inline-block;
+							  border-radius: 2px;
+							  font-size: 16px;">
+						      Go To Application</button>
   							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Super-Resolution-GAN">GitHub Page</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<p>Super sampling images to 4 times their original size using Convolutional Neural Networks. I compare <a href="https://pillow.readthedocs.io/en/3.1.x/reference/Image.html#PIL.Image.Image.resize"> Nearest Neighbor Interpolation</a> to my Deep Learned Super Resolution program below:</p>
