--- a/gan.html
+++ b/gan.html
@@ -29,7 +29,7 @@
 					  <div style="height:10px;font-size:5px;">&nbsp;</div>
 					  <h5 style = "text-align:center";>Input Range</h5>
 				      <div class="slidecontainer">
-					  	<input type="range" min="1" max="19" class="slider" id="myRange" style=" 
+					  	<input type="range" min="1" max="59" value = "30" class="slider" id="myRange" style=" 
 					  	-webkit-appearance: none;  /* Override default CSS styles */
 						  appearance: none;
 						  width: 100%; /* Full-width */
