added higher resolution model

--- a/hr.html
+++ b/hr.html
@@ -14,19 +14,17 @@
 					<p style="text-align: left; letter-spacing: 1px"><a href = "projects.html">Go Back</a></p>
   					 <center>
 				      <h1>Super Resolution</h1>
-				      <p style = "text-align:center;">Upload a 128x128 image to increase its resolution to 256x256</p>
+				      <p style = "text-align:center;">Upload a 90x128 image to increase its resolution to 360x512</p>
 				      <input type="file" id="myFile" style="width:480px"></input>
 				      <img id="myImage" style="border:1px; display: none;"/>
 				      <div style="height:5px;font-size:5px;">&nbsp;</div>
 				      <canvas id="canvas"></canvas>
-				      <p style = "text-align:center; display:none;" id="t1">Uploaded Image (128x128)</p>
+				      <p style = "text-align:center; display:none;" id="t1">Uploaded Image (90x128)</p>
 				      <div style="height:5px;font-size:5px;">&nbsp;</div>
 				      <canvas id="canvas2"></canvas>
-				      <p style = "text-align:center; display:none;" id="t2">Super Sampled Imaged (256x256)</p>
-				      <div style="height:5px;font-size:5px;">&nbsp;</div>
-				      <a href = "hr.html"> Use 90x128 to 360x512 Model</a>	
+				      <p style = "text-align:center; display:none;" id="t2">Super Sampled Imaged (360x512)</p>
 				    </center>
 			</div>
 	</body>
-	<script src="new.js"></script>
+	<script src="hr.js"></script>
 </html>
