--- a/hr.html
+++ b/hr.html
@@ -15,7 +15,8 @@
   					 <center>
 				      <h1>Super Resolution</h1>
 				      <p style = "text-align:center;">Upload a 90x128 image to increase its resolution to 360x512.</p>
-				      <p style = "text-align:center;">Warning, this model is very large. Make sure you have a decent GPU on the device you are running this on.</p>
+				      <h2 style = "text-align:center; color: red;" >Warning</h2>
+				      <p style = "text-align:center; color: red;" >This model is very large. Make sure you have a decent GPU on the device you are running this.</p>
 				      <input type="file" id="myFile" style="width:480px"></input>
 				      <img id="myImage" style="border:1px; display: none;"/>
 				      <div style="height:5px;font-size:5px;">&nbsp;</div>
