--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 						<header>
 							<span class="avatar"><img src="images/me.JPG" alt="" /></span>
 							<h1>Vee Upatising</h1>
-							<h2 style="font-size:80%">Bachelor of Science in</h2>
-							<h2 style="font-size:80%">Computer Engineering</h2>
+							<h2 style="font-size:80%">Software Engineering</h2>
+							<h2 style="font-size:80%">Test Developer</h2>
+							<h2 style="font-size:80%">at <a href="https://workera.ai/">Workera.AI</a></h2>
 							<p style="color:#6495ED;text-align:center;">
 								<a href="assets/resume.pdf">RESUME</a>
 							</p>
