--- a/mobile.html
+++ b/mobile.html
@@ -11,7 +11,7 @@
 		<!-- Wrapper -->
 			<div id="wrapper2">
 				<section id="vb">
-					<p style="text-align: left; letter-spacing: 1px"><a href = "projects.html">Go Back</a></p>
+					<p style="text-align: left; letter-spacing: 1px"><a href = "model.html">Go Back</a></p>
   					 <center>
 				      <h1>Super Resolution</h1>
 				      <p style = "text-align:center;">Upload a 128x128 image to increase its resolution to 256x256</p>
@@ -24,9 +24,8 @@
 				      <canvas id="canvas2"></canvas>
 				      <p style = "text-align:center; display:none;" id="t2">Super Sampled Imaged (256x256)</p>
 				      <div style="height:5px;font-size:5px;">&nbsp;</div>
-				      <a href = "mobile.html"> Use Low Res Mobile Model</a>	
 				    </center>
 			</div>
 	</body>
-	<script src="new.js"></script>
+	<script src="mobile.js"></script>
 </html>
