--- a/projects.html
+++ b/projects.html
@@ -167,7 +167,7 @@
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
   							<p style="text-align: center;"><a href = "https://github.com/vee-upatising/Instagram-Forecasting">GitHub Page</a></p>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<img src="images/insta1.png" alt="Likes Given Per Account" class="responsive" loading="lazy">
+		  					<img src="images/insta1.png" alt="Likes Given Per Account" class="responsive">
 		  					<img src="images/insta2.png" alt="Forecasting" class="responsive">
 		  					<img src="images/insta3.png" alt="Forecasting" class="responsive">
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
