Mobile Responsive Test

--- a/vb.html
+++ b/vb.html
@@ -15,7 +15,7 @@
 					<p style="text-align: left; letter-spacing: 1px"><a href = "projects.html">Go Back</a></p>
   					 
 				    <h1>Virtual Background</h1>
-				    <video id="video" width="640" height="480" autoplay playsinline></video>
+				    <video id="video" width="640" height="480" autoplay playsinline class = "responsive"></video>
 				    <center>
 				      <img id="myImage" style="border:1px; display: none;"/>
 				      <canvas hidden id="canvas"></canvas>
