--- a/model.html
+++ b/model.html
@@ -14,7 +14,7 @@
 					<p style="text-align: left; letter-spacing: 1px"><a href = "projects.html">Go Back</a></p>
   					 <center>
 				      <h1>Super Resolution</h1>
-				      <p style = "text-align:center;">Upload a 128x128 image to increase its resolution to 256x256</p>
+				      <p style = "text-align:center;" id="title">Upload a 128x128 image to increase its resolution to 256x256</p>
 				      <input type="file" id="myFile" style="width:480px"></input>
 				      <img id="myImage" style="border:1px; display: none;"/>
 				      <div style="height:5px;font-size:5px;">&nbsp;</div>
@@ -24,7 +24,6 @@
 				      <canvas id="canvas2"></canvas>
 				      <p style = "text-align:center; display:none;" id="t2">Super Sampled Imaged (256x256)</p>
 				      <div style="height:5px;font-size:5px;">&nbsp;</div>
-				      <a href = "mobile.html"> Use Low Res Mobile Model</a>	
 				    </center>
 			</div>
 	</body>
